--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <script src="js/elastic.js"></script> -->
 </head>
 
-<body ng-app="wecrm">
+<body ng-app="wecrm">111
     <ion-nav-view></ion-nav-view>
 </body>
 
